<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NanodegreeAppsLauncher">



    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_centerVertical="true"
                android:textColor="@color/bachground"
                android:text="@string/app_name"
                android:id="@+id/toolbar_title" />

        </android.support.v7.widget.Toolbar>

        <TextView
            android:id="@+id/title"
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@id/toolbar"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/app1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app1"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:background="@color/button"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginEnd="35dp"
            android:textAllCaps="true"/>

        <Button
            android:id="@+id/app2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app2"
            android:layout_below="@id/app1"
            android:layout_centerHorizontal="true"
            android:background="@color/button"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginEnd="35dp"
            android:textAllCaps="true"/>

        <Button
            android:id="@+id/app3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app3"
            android:layout_below="@id/app2"
            android:layout_centerHorizontal="true"
            android:background="@color/button"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginEnd="35dp"
            android:textAllCaps="true"/>

        <Button
            android:id="@+id/app4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app4"
            android:layout_below="@id/app3"
            android:layout_centerHorizontal="true"
            android:background="@color/button"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginEnd="35dp"
            android:textAllCaps="true"/>

        <Button
            android:id="@+id/app5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app5"
            android:layout_below="@id/app4"
            android:layout_centerHorizontal="true"
            android:background="@color/button"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginEnd="35dp"
            android:textAllCaps="true"/>

        <Button
            android:id="@+id/app6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app6"
            android:layout_below="@id/app5"
            android:layout_centerHorizontal="true"
            android:textColor="@color/bachground"
            android:background="@color/myapp"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginEnd="35dp"
            android:textAllCaps="true"/>

    </RelativeLayout>



</ScrollView>
